# valentina

./: .cirrus.yml  .clang-format  .gitignore  .hgtags  .mcp.json  .travis.yml  AUTHORS.txt  ChangeLog.txt  README.md  README.txt  Valentina.pro  appveyor.yml  common.pri  conanfile.py  conanfile.txt  dmg.qbs  sonar-project.properties  valentina.qbs  winsetup.qbs
.claude/: settings.json
.github/workflows/: email.yml  linux.yml  macos.yml  windows.yml
.tx/: config
qbs/imports/: VApp.qbs  VAppleApplicationDiskImage.qbs  VDynamicLib.qbs  VLib.qbs  VTestApp.qbs  VToolApp.qbs
qbs/module-providers/: conan.js
scripts/: appimage-deploy.sh  appveyor-deploy.ps1  cirrus-deploy.sh  cppcheck.sh  crashpad_handler_wrapper  deploy.py  generate_tool_cursor.sh  gitlab_package_upload.sh  install-qbs.sh  install-qt.sh  install_dump_sysms.ps1  lupdate.sh  man2pdf.sh  obs_debian.sh  qbs_lupdate.sh  sign-binaries.ps1  sonar-scanner.sh  symupload.py  travis-deploy.sh  treestate.py  upload_symbols.py  win_ico.sh
share/: bintray.json  qtlogging.ini  requirements-ci.txt  valentina_code_style.xml
share/ci/: README.md  pyproject.toml  requirements-ci.txt
share/ci/conan/profiles/: appimage  macos  macos_arm  windows  windows_legacy
share/new-icons/: Valentina.fig
share/translations/: measurements.pro  measurements.qbs  measurements_p0_cs_CZ.ts  measurements_p0_de_DE.ts  measurements_p0_el_GR.ts  measurements_p0_en_IN.ts  measurements_p0_es_ES.ts  measurements_p0_fi_FI.ts  measurements_p0_fr_FR.ts  measurements_p0_he_IL.ts  measurements_p0_it_IT.ts  (+169 more)
src/: src.qbs
src/app/: app.pro  (+3 more)
(+2079 files in other folders)
